--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
-/*
- Theme Name:   Twenty nineteen enfant
+﻿/*
+ Theme Name:   Twenty nineteen enfant 2
  Theme URI:    http://example.com/twenty-fifteen-child/
  Description:  Twenty nineifteen thème enfant
  Author:       Allen Jang
@@ -9,6 +9,5 @@
  License:      GNU General Public License v2 or later
  License URI:  http://www.gnu.org/licenses/gpl-2.0.html
  Tags:         light, dark, two-columns, right-sidebar, responsive-layout, accessibility-ready
- Text Domain:  twentynineteenenfant
-*/
+ Text Domain:  twentynineteenenfant2
 
