Entete Ajout dun border et ajout des import dans style

--- a/sass/style.css
+++ b/sass/style.css
@@ -22,6 +22,10 @@ p {
   color: aquamarine;
 }
 
+.entry-header {
+  border: 1px solid black;
+}
+
 .rayure {
   background: repeating-linear-gradient(45deg, blue, blue 10px, lightblue 10px, lightblue 20px);
 }
