--- a/sass/style.scss
+++ b/sass/style.scss
@@ -16,6 +16,6 @@
 
 @import "_gutenberg.scss";
 
-// @import "_mixin.scss";
+@import "_mixin.scss";
 
-// @import "_footer.scss";
+@import "_footer.scss";
